# ds-u2-actividad-1-listasenlazadassimples-KirbyStone69

./: CMakeLists.txt  DOXYGEN.md  Doxyfile.in  README.md  SensorSystem.cpp  SensorSystem.h  SensorSystem_new.h  main.cpp  main_new.cpp
docs/: mainpage.dox
docs/examples/: usage_example.cpp
